criação de uma nova section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <ul class="ulflex">
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#sobre">Sobre Mim</a></li>
-                        <li><a href="#tatuagens">Tatuagens</a></li>
+                        <li><a href="#tatuagem">Tatuagens</a></li>
                         <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
@@ -57,6 +57,26 @@
                         <img src="imagens/WhatsApp Image 2025-09-24 at 10.54.31 (2).jpeg" alt="img sobre">
                     </div>
                     
+                </div>
+            </div>
+        </section>
+
+        <section class="tatuagens" id="tatuagem">
+            <div class="interface">
+                <h2>Tatuagens</h2>
+                <div class="flex">
+                    <div class="tatu">
+                        <a href=""><img src="" alt="foto1"></a>
+                    </div>
+                    <div class="tatu">
+                        <a href=""><img src="" alt="foto2"></a>
+                    </div>
+                    <div class="tatu">
+                        <a href=""><img src="" alt="foto3"></a>
+                    </div>
+                    <div class="tatu">
+                        <a href=""><img src="" alt="foto4"></a>
+                    </div>
                 </div>
             </div>
         </section>
