--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a href="#"><button>Contato</button></a>
                     </div>
                     <div class="img-topo">
-                        <img src="imagens/WhatsApp Image 2025-09-24 at 10.54.22 (1).jpeg" alt="imagem">
+                        <img src="imagens/guerreiro.jpeg" alt="imagem">
                     </div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                         Com experiência em diferentes estilos  como realismo, blackwork, minimalismo e trabalhos autorais  procuro oferecer aos meus clientes um atendimento próximo e personalizado, garantindo não apenas um resultado estético de qualidade, mas também uma experiência segura e significativa. Cada tatuagem é feita com atenção aos detalhes, respeito à identidade do cliente e compromisso com a arte que ficará marcada para sempre.</p>
                     </div>
                     <div class="img-sobre">
-                        <img src="imagens/WhatsApp Image 2025-09-24 at 10.54.31 (2).jpeg" alt="img sobre">
+                        <img src="imagens/tatu anjo caido.jpeg" alt="img sobre">
                     </div>
                     
                 </div>
@@ -66,16 +66,10 @@
                 <h2>Tatuagens</h2>
                 <div class="flex">
                     <div class="tatu">
-                        <a href=""><img src="" alt="foto1"></a>
+                        <a href=""><img src="imagens/rolo1.png" alt="foto1"></a>
                     </div>
                     <div class="tatu">
-                        <a href=""><img src="" alt="foto2"></a>
-                    </div>
-                    <div class="tatu">
-                        <a href=""><img src="" alt="foto3"></a>
-                    </div>
-                    <div class="tatu">
-                        <a href=""><img src="" alt="foto4"></a>
+                        <a href=""><img src="imagens/rolo2.png" alt="foto2"></a>
                     </div>
                 </div>
             </div>
