criação do footer

--- a/index.html
+++ b/index.html
@@ -65,15 +65,25 @@
             <div class="interface">
                 <h2>Tatuagens</h2>
                 <div class="flex">
-                    <div class="tatu">
-                        <a href=""><img src="imagens/rolo1.png" alt="foto1"></a>
-                    </div>
-                    <div class="tatu">
-                        <a href=""><img src="imagens/rolo2.png" alt="foto2"></a>
-                    </div>
+                    <div class="tatu" style="background-image: url(imagens/rolo1.png);"></div>
+                    <div class="tatu" style="background-image: url(imagens/rolo2.png);"></div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="flex">
+            <div class="img-logo">
+                <a href="#inicio"><img src="imagens/logo av.png" alt="logo"></a>
+            </div>
+
+            <div class="paragrafo1">
+                <a href="">
+                    <p>ENTRE EM CONTATO COMIGO PARA MAIS INFORMAÇÕES</p>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
